[feat] it add authentication with clerk

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-DATABASE_URL="postgresql://postgres:postgres@postgres/finance_dev"
+DATABASE_URL=postgresql://postgres:postgres@postgres/finance_dev
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Y2FyaW5nLW1hbGFtdXRlLTIyLmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_lBP1gpAKmfg4nzP5CIwZC6a5zehihv4X90Zkuuc2iE
