--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - ./.postgres-data:/var/lib/postgresql/data
   
 volumes:
-  pgdata: {}
+  .postgres-data:
